--- a/infrastructure/webapp-autoscaling-appserver.yaml
+++ b/infrastructure/webapp-autoscaling-appserver.yaml
@@ -71,10 +71,6 @@ Parameters:
     Type: "String"
 
 
-####### Condition Setup #######
-Conditions: 
-  UseProdEnv: !Equals [ !Ref "PMServerEnv", "prod" ]
-
 ####### Resources Setup #######
 Resources:
 
@@ -141,7 +137,7 @@ Resources:
       DesiredCapacity: !Ref "PMASDES"
       LaunchConfigurationName:
         Ref: "LaunchConfiguration"
-      VPCZoneIdentifier: !If [ "UseProdEnv", !Ref "PMPrivateSubnets", !Ref "PMPublicSubnets" ]
+      VPCZoneIdentifier: !Ref "PMPrivateSubnets"
       LoadBalancerNames:
       - Ref: "PMAPPLoadBalancer"
       HealthCheckGracePeriod: "300"
