--- a/infrastructure/webapp-autoscaling-appserver.yaml
+++ b/infrastructure/webapp-autoscaling-appserver.yaml
@@ -74,7 +74,7 @@ Resources:
   LaunchConfiguration:
     Type: "AWS::AutoScaling::LaunchConfiguration"
     Properties:
-      AssociatePublicIpAddress: "true"
+      AssociatePublicIpAddress: "false"
       KeyName:
         Ref: "PMKeyName"
       ImageId: 
